# chesslike-v3

./: .gitignore  .nvim.lua  CMakeLists.txt  Makefile  README.md  animation_exporter.py  build.bat  debug.cap  exporter.py  frag.spv  mesh_exporter.py  project.blend  run.bat  tags.bat  todo.txt  vert.spv
assets/: scene.end  scene.sce
include/: arena.h  assets.h  defines.h  game_math.h  loading.h  render_queue.h  scene.h  uniform.h  utils.h  vk_engine.h  vk_initializers.h  vulkan_renderer.h
shader/: frag.glsl  pbr.frag  pbr.vert  pbr_frag.spv  skinned.frag  skinned.vert  skinnedv.spv  staticv.spv  vert.glsl
src/: arena.cpp  assets.cpp  camera.cpp  loading.cpp  main.c  main.cpp  render_queue.cpp  scene.cpp  utils.cpp  vk_engine.cpp  vk_initializers.cpp  vulkan_renderer.cpp
